
2017-10-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: use `` instead of $() - see Bug #437

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: use exported COBC/COBCRUN instead of relying on
	  exported PATH; changed to keep a list of tex-includes

2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: explained use of cob_tidy / cob_stop_run

2017-07-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: added -std=rm and all strict variants,
	  added explanations for -std

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: passed GREP from configure to cobcinfo.sh
	* cobcinfo.sh: use GREP from configure, check for working grep -A

2017-02-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* texinfo.tex: moved to ../build_aux
	* Makefile.am, cobcinfo.sh: changes to cater for move of texinfo.tex
	* general: always regenerate tex include files when building gnucobol.texi

2016-12-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: fixed texinfo warnings

2016-10-22  Dave Pitts <dpitts@cozx.com>

	* gnucobol.texi: added --no-symbols option

2016-10-17  Dave Pitts <dpitts@cozx.com>

	* gnucobol.texi: added a COPY to listing example

2016-10-16  Dave Pitts <dpitts@cozx.com>

	* gnucobol.texi: added listing example

2016-10-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: replaced cb_conf by samples of compiler configuration
	  flags and added minimal entry for listing options

2016-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* gnucobol.texi: Added entries for all GC-specific system libraries

2016-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcinfo.sh: used new option -q to remove most `sed` calls

2016-08-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
